Fix JBang defined class Dev UI linking
Fixes: #23001
(cherry picked from commit 8f7ea3d9a475ef423e6dc921fbb716fa11c88bf6)